# dcm-user-guide

./: README.md  mkdocs.yml  pyproject.toml
.github/workflows/: deploy.yml
docs/: anwendung-administrieren.md  benutzeroberflaeche.md  glossar.md  grundlagen.md  index.md  jobs-konfigurieren.md  jobs-managen-und-ueberwachen.md
docs/stylesheets/: extra.css
overrides/partials/: copyright.html  source-file.html
